--- a/Cinemtiyo/StoryBoards/Custom.storyboard
+++ b/Cinemtiyo/StoryBoards/Custom.storyboard
@@ -80,66 +80,68 @@
                                     <constraint firstAttribute="height" constant="150" id="YrD-rv-IVh"/>
                                 </constraints>
                             </imageView>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="81Y-lg-ZN0">
-                                <rect key="frame" x="5" y="501" width="404" height="361"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="3EK-PE-JQU">
-                                    <size key="itemSize" width="50" height="50"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells/>
-                            </collectionView>
-                            <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="155" translatesAutoresizingMaskIntoConstraints="NO" id="VmV-Qn-lI9">
-                                <rect key="frame" x="5" y="160" width="404" height="54"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="1ky-zu-G4Y">
+                                <rect key="frame" x="12" y="162" width="94.5" height="48"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="PAm-66-I4t">
-                                        <rect key="frame" x="0.0" y="0.0" width="124.5" height="54"/>
-                                        <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Avangers" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e1p-sk-Z2y">
-                                                <rect key="frame" x="0.0" y="0.0" width="111.5" height="29"/>
-                                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="24"/>
-                                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Overview" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7wH-a3-qtS">
-                                                <rect key="frame" x="0.0" y="30" width="84.5" height="24"/>
-                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
-                                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                        </subviews>
-                                    </stackView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2019-18-06" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2xP-yd-Abw">
-                                        <rect key="frame" x="279.5" y="17" width="124.5" height="20.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Avangers" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mZr-6D-Y7t">
+                                        <rect key="frame" x="0.0" y="0.0" width="94.5" height="26.5"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="22"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OverView" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vyt-7B-wyF">
+                                        <rect key="frame" x="0.0" y="27.5" width="73.5" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                             </stackView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="zlU-Cl-h3H">
+                                <rect key="frame" x="10" y="217" width="394" height="130"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="130" id="ZGj-fs-NXb"/>
+                                </constraints>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gvz-DE-LFy">
+                                <rect key="frame" x="292" y="172" width="107" height="40"/>
+                                <color key="backgroundColor" red="0.57919406890000003" green="0.1280144453" blue="0.57268613580000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="107" id="V37-0Z-F0b"/>
+                                    <constraint firstAttribute="height" constant="40" id="k3g-Gw-ucG"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                <state key="normal" title="Watch Trailer">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="VmV-Qn-lI9" firstAttribute="top" secondItem="han-MX-Bfj" secondAttribute="bottom" constant="10" id="016-rP-55G"/>
-                            <constraint firstItem="81Y-lg-ZN0" firstAttribute="bottom" secondItem="auD-HJ-NBT" secondAttribute="bottom" id="EI3-Ot-5WY"/>
-                            <constraint firstAttribute="trailing" secondItem="VmV-Qn-lI9" secondAttribute="trailing" constant="5" id="K8E-UE-xZM"/>
+                            <constraint firstItem="gvz-DE-LFy" firstAttribute="top" secondItem="han-MX-Bfj" secondAttribute="bottom" constant="22" id="53E-ZS-T6P"/>
+                            <constraint firstItem="auD-HJ-NBT" firstAttribute="trailing" secondItem="zlU-Cl-h3H" secondAttribute="trailing" constant="10" id="5b3-yG-kdp"/>
+                            <constraint firstItem="1ky-zu-G4Y" firstAttribute="top" secondItem="han-MX-Bfj" secondAttribute="bottom" constant="12" id="IUn-4v-Xff"/>
+                            <constraint firstItem="auD-HJ-NBT" firstAttribute="trailing" secondItem="gvz-DE-LFy" secondAttribute="trailing" constant="15" id="Mvc-g1-vlX"/>
+                            <constraint firstItem="1ky-zu-G4Y" firstAttribute="leading" secondItem="auD-HJ-NBT" secondAttribute="leading" constant="12" id="TKV-IM-vKf"/>
                             <constraint firstItem="han-MX-Bfj" firstAttribute="top" secondItem="RdL-Gj-nBw" secondAttribute="top" id="V6J-YL-td7"/>
                             <constraint firstAttribute="trailing" secondItem="han-MX-Bfj" secondAttribute="trailing" id="Whx-gW-25A"/>
-                            <constraint firstItem="VmV-Qn-lI9" firstAttribute="leading" secondItem="auD-HJ-NBT" secondAttribute="leading" constant="5" id="bLr-Ul-for"/>
-                            <constraint firstItem="81Y-lg-ZN0" firstAttribute="leading" secondItem="auD-HJ-NBT" secondAttribute="leading" constant="5" id="eyc-dA-2tl"/>
-                            <constraint firstItem="81Y-lg-ZN0" firstAttribute="height" secondItem="auD-HJ-NBT" secondAttribute="height" multiplier="1:2" id="mm4-8R-elb"/>
+                            <constraint firstItem="zlU-Cl-h3H" firstAttribute="top" secondItem="1ky-zu-G4Y" secondAttribute="bottom" constant="7" id="ik7-G0-KQ7"/>
+                            <constraint firstItem="zlU-Cl-h3H" firstAttribute="leading" secondItem="auD-HJ-NBT" secondAttribute="leading" constant="10" id="qJ5-BW-eoG"/>
                             <constraint firstItem="han-MX-Bfj" firstAttribute="leading" secondItem="auD-HJ-NBT" secondAttribute="leading" id="tN8-fk-nXm"/>
-                            <constraint firstItem="auD-HJ-NBT" firstAttribute="trailing" secondItem="81Y-lg-ZN0" secondAttribute="trailing" constant="5" id="wOE-3u-SUA"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="auD-HJ-NBT"/>
                     </view>
                     <navigationItem key="navigationItem" id="lsI-pO-DK6"/>
                     <connections>
-                        <outlet property="attributesCollectionView" destination="81Y-lg-ZN0" id="Mio-sA-SRf"/>
                         <outlet property="movieCoverPoster" destination="han-MX-Bfj" id="g2y-pT-RAv"/>
-                        <outlet property="movieTitleLabel" destination="e1p-sk-Z2y" id="ePl-V5-IzT"/>
+                        <outlet property="movieDescriptionTextView" destination="zlU-Cl-h3H" id="uBG-DB-rXf"/>
+                        <outlet property="movieTitleLabel" destination="mZr-6D-Y7t" id="cPI-Dn-Yyv"/>
+                        <outlet property="trailerButton" destination="gvz-DE-LFy" id="xnh-Uy-a8d"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iv5-1B-dDC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
