--- a/Cinemtiyo/StoryBoards/Custom.storyboard
+++ b/Cinemtiyo/StoryBoards/Custom.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -116,7 +117,44 @@
                                     <constraint firstAttribute="height" constant="40" id="k3g-Gw-ucG"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
-                                <state key="normal" title="Watch Trailer">
+                                <state key="normal" title="Trailer">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="watchTrailer" destination="Q15-Kn-65p" eventType="touchUpInside" id="fiX-EK-JA2"/>
+                                </connections>
+                            </button>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="OSc-hD-79q">
+                                <rect key="frame" x="5" y="427" width="404" height="435"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="85Y-4c-Kle">
+                                    <size key="itemSize" width="123" height="115"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="movieImageCell" id="gzB-z4-bbL">
+                                        <rect key="frame" x="0.0" y="0.0" width="123" height="115"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="DqA-1E-DnM">
+                                            <rect key="frame" x="0.0" y="0.0" width="123" height="115"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <color key="backgroundColor" red="0.57919406890000003" green="0.1280144453" blue="0.57268613580000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="123" height="115"/>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yRd-X6-dJl">
+                                <rect key="frame" x="123.5" y="362" width="167" height="45"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="rAi-AI-MLR"/>
+                                    <constraint firstAttribute="width" constant="167" id="vx7-2B-IV3"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                <state key="normal" title="Add to Watch list">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                             </button>
@@ -125,12 +163,18 @@
                         <constraints>
                             <constraint firstItem="gvz-DE-LFy" firstAttribute="top" secondItem="han-MX-Bfj" secondAttribute="bottom" constant="22" id="53E-ZS-T6P"/>
                             <constraint firstItem="auD-HJ-NBT" firstAttribute="trailing" secondItem="zlU-Cl-h3H" secondAttribute="trailing" constant="10" id="5b3-yG-kdp"/>
+                            <constraint firstItem="auD-HJ-NBT" firstAttribute="trailing" secondItem="OSc-hD-79q" secondAttribute="trailing" constant="5.0499999999999998" id="DWC-PS-Xcj"/>
                             <constraint firstItem="1ky-zu-G4Y" firstAttribute="top" secondItem="han-MX-Bfj" secondAttribute="bottom" constant="12" id="IUn-4v-Xff"/>
+                            <constraint firstItem="OSc-hD-79q" firstAttribute="top" secondItem="yRd-X6-dJl" secondAttribute="bottom" constant="20" id="M5T-Zh-fju"/>
                             <constraint firstItem="auD-HJ-NBT" firstAttribute="trailing" secondItem="gvz-DE-LFy" secondAttribute="trailing" constant="15" id="Mvc-g1-vlX"/>
+                            <constraint firstItem="yRd-X6-dJl" firstAttribute="centerX" secondItem="RdL-Gj-nBw" secondAttribute="centerX" id="QNQ-pr-mpv"/>
+                            <constraint firstItem="OSc-hD-79q" firstAttribute="leading" secondItem="auD-HJ-NBT" secondAttribute="leading" constant="5" id="QdV-0Y-9qm"/>
                             <constraint firstItem="1ky-zu-G4Y" firstAttribute="leading" secondItem="auD-HJ-NBT" secondAttribute="leading" constant="12" id="TKV-IM-vKf"/>
                             <constraint firstItem="han-MX-Bfj" firstAttribute="top" secondItem="RdL-Gj-nBw" secondAttribute="top" id="V6J-YL-td7"/>
                             <constraint firstAttribute="trailing" secondItem="han-MX-Bfj" secondAttribute="trailing" id="Whx-gW-25A"/>
+                            <constraint firstItem="OSc-hD-79q" firstAttribute="bottom" secondItem="auD-HJ-NBT" secondAttribute="bottom" id="Wih-hB-NjR"/>
                             <constraint firstItem="zlU-Cl-h3H" firstAttribute="top" secondItem="1ky-zu-G4Y" secondAttribute="bottom" constant="7" id="ik7-G0-KQ7"/>
+                            <constraint firstItem="yRd-X6-dJl" firstAttribute="top" secondItem="zlU-Cl-h3H" secondAttribute="bottom" constant="15" id="og1-1y-JyO"/>
                             <constraint firstItem="zlU-Cl-h3H" firstAttribute="leading" secondItem="auD-HJ-NBT" secondAttribute="leading" constant="10" id="qJ5-BW-eoG"/>
                             <constraint firstItem="han-MX-Bfj" firstAttribute="leading" secondItem="auD-HJ-NBT" secondAttribute="leading" id="tN8-fk-nXm"/>
                         </constraints>
@@ -138,6 +182,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="lsI-pO-DK6"/>
                     <connections>
+                        <outlet property="imagesCollectionView" destination="OSc-hD-79q" id="Zap-Dd-WSw"/>
                         <outlet property="movieCoverPoster" destination="han-MX-Bfj" id="g2y-pT-RAv"/>
                         <outlet property="movieDescriptionTextView" destination="zlU-Cl-h3H" id="uBG-DB-rXf"/>
                         <outlet property="movieTitleLabel" destination="mZr-6D-Y7t" id="cPI-Dn-Yyv"/>
